Fix font flash on reload by using font-display: block
Changed font-display from swap to block to eliminate FOIT (Flash of Invisible Text) when reloading the page.

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
   src: url('./assets/fonts/Cormorant-VariableFont_wght.ttf') format('truetype');
   font-weight: 100 900;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -14,7 +14,7 @@
   src: url('./assets/fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
   font-weight: 100 900;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 :root {
